# UkraineSimulation

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ukraine_simulation/environment/model/: __init__.py
src/ukraine_simulation/environment/trace_contacts/: __init__.py
