[tool.poetry]
name = "ukrainesimulation"
version = "0.1.0"
description = ""
authors = ["RostyslavPanto <rostyslav.panto@mint.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pytest = "^8.1.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
gym = "^0.26.2"
scipy = "^1.13.0"
pydantic = "^2.7.0"
folium = "^0.16.0"
osmnx = "^1.9.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
